CSS fix for alignment of the collapse toggle on the main navigation

--- a/assets/css/app/custom.scss
+++ b/assets/css/app/custom.scss
@@ -1,7 +1,9 @@
 body {
     background-color: #0c0c0c;
 }
-
+#main-navigation button.navbar-toggle {
+    margin-right: -30px;
+}
 #brand-image {
     height: 66px;
     width: auto;
